logs/comt.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cm'...
Listing './lib/python3.5/site-packages/cm/api'...
Compiling './lib/python3.5/site-packages/cm/client.py'...
***   File "./lib/python3.5/site-packages/cm/client.py", line 389
    except ValidationError, e :
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cm/converters'...
Compiling './lib/python3.5/site-packages/cm/converters/abi_converters.py'...
***   File "./lib/python3.5/site-packages/cm/converters/abi_converters.py", line 180
    os.chmod(temp_dir, 0755) # read
                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/cm/converters/oo_converters.py'...
***   File "./lib/python3.5/site-packages/cm/converters/oo_converters.py", line 289
    os.chmod(temp_dir, 0755) # read
                          ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/cm/ext'...
Compiling './lib/python3.5/site-packages/cm/ext/diff_match_patch.py'...
***   File "./lib/python3.5/site-packages/cm/ext/diff_match_patch.py", line 1133
    raise ValueError, "Invalid number in diff_fromDelta: " + param
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cm/ext/html2text.py'...
***   File "./lib/python3.5/site-packages/cm/ext/html2text.py", line 278
    self.o("][" + `a['count']` + "]")
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cm/management'...
Listing './lib/python3.5/site-packages/cm/management/commands'...
Listing './lib/python3.5/site-packages/cm/migrations'...
Compiling './lib/python3.5/site-packages/cm/monkey_patches.py'...
***   File "./lib/python3.5/site-packages/cm/monkey_patches.py", line 20
    except ImportError, exc:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cm/templatetags'...
Compiling './lib/python3.5/site-packages/cm/templatetags/activity.py'...
***   File "./lib/python3.5/site-packages/cm/templatetags/activity.py", line 37
    raise template.TemplateSyntaxError, "%r tag requires 6 arguments" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cm/templatetags/com.py'...
***   File "./lib/python3.5/site-packages/cm/templatetags/com.py", line 11
    raise template.TemplateSyntaxError, "%r tag requires a single argument" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cm/templatetags/local_perms.py'...
***   File "./lib/python3.5/site-packages/cm/templatetags/local_perms.py", line 30
    raise template.TemplateSyntaxError, "%r tag requires arguments" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cm/tests'...
Compiling './lib/python3.5/site-packages/cm/tests/test_activity.py'...
***   File "./lib/python3.5/site-packages/cm/tests/test_activity.py", line 14
    activity = get_activity(text, user='all', reference_date=datetime(2009,02,01))
                                                                            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/cm/utils'...
Compiling './lib/python3.5/site-packages/cm/utils/thread.py'...
***   File "./lib/python3.5/site-packages/cm/utils/thread.py", line 23
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cm/views'...
Compiling './lib/python3.5/site-packages/cm/views/texts.py'...
***   File "./lib/python3.5/site-packages/cm/views/texts.py", line 802
    print form.cleaned_data
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/comt-0.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
